Revert "fix header overlapping presets"
This reverts commit 6d6fa6a962fb151225b6a6005dcff0135a24e41c.

--- a/app/styles/_presets.scss
+++ b/app/styles/_presets.scss
@@ -1,5 +1,5 @@
 #presets {
-  margin-top: 40px;
+  margin-top: -10px;
   text-align: center ;
 
   @include user-select(none);
